<resources>
    <string name="app_name">Stevan Mihalic</string>
    <string name="open_drawer">Drawer Opened</string>
    <string name="close_drawer">Drawer Closed</string>
    <string name="dialog_about_title">O Aplikaciji</string>
    <string name="dialog_about_message">Aplikacija O TODOZADACIMA</string>
    <string name="dialog_about_yes">Confirm</string>
    <string name="dialog_about_no">Cancel</string>
    <string name="dodaj_grupu">Dodaj Grupu</string>
    <string name="naziv_grupe">Naziv Grupe</string>
    <string name="vreme_kreiranja_grupe">Vreme Kreiranja Grupe</string>
    <string name="oznak_grupe_tag"><![CDATA[Oznak Grupe < TAG >]]></string>
    <string name="potvrdi">Potvrdi</string>
    <string name="odustani">Odustani</string>
    <string name="todozadatak">ToDOZADATAK</string>
    <string name="lista_tagova">Lista Tagova:</string>
    <string name="lista_zadataka">Lista Zadataka:</string>
    <string name="opis_zadatka">Opis ZADATKA</string>
    <string name="vreme_kreiranja_zadatka">Vreme Kreiranja Zadatka</string>
    <string name="vreme_zavrsetka_zadatka">Vreme Zavrsetka Zadatka</string>
    <string name="prioritet">PRIORITET:</string>
    <string name="status">STATUS:</string>
    <string name="naziv_zadatka">Naziv Zadatka</string>
    <string name="novo_vreme_kreiranja">Novo vreme Kreiranja</string>
</resources>
